--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/assets/css/style.css" rel="stylesheet">
-    <title>{{ site.title }} | id0o0bi.github.io</title>
+    <title>{{ page.title }} | id0o0bi.github.io</title>
 </head>
 <body>
     {{ page.content }}
